更新弱引用